# AutoReview

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/Commands/: .directory  AttachDriverToAuto.cpp  AttachDriverToCar.cpp  AttachDriverToCar.h  CarAccessories.cpp  CarAccessories.h  ChangeCarStatus.cpp  ChangeCarStatus.h  CheckDriver.cpp  CheckDriver.h  Definitions.h  GetAcceptedCarNumbers.cpp  GetAcceptedCarNumbers.h  GetAutoNumbers.cpp  GetAutoNumbers.h  GetCarAccessories.cpp  GetCarAccessories.h  GetCarDamage.cpp  GetCarDamage.h  GetCarInfo.cpp  GetCarInfo.h  GetDriverPhoto.cpp  GetDriverPhoto.h  GetDrivers.cpp  GetDrivers.h  GetReceptionCarNumber.cpp  GetReceptionCarNumber.h  GetReleasedCarNumbers.cpp  GetReleasedCarNumbers.h  GetRelisedCarNumbers.cpp  GetRelisedCarNumbers.h  GetStartingData.cpp  GetStartingData.h  Login.cpp  Login.h  RemoveDriverFromAuto.cpp  RemoveDriverFromAuto.h  RemoveDriverFromCar.cpp  RemoveDriverFromCar.h  SaveCarAccessories.cpp  (+9 more)
src/Core/: Core.cpp  Core.h
src/Request/: ServerRequestHandler.cpp  ServerRequestHandler.h
web/: AutoReview.php  QAT.php  commands.php  config.php  dbManager.php  errors.php  networkManager.php  test.html  utils.php
web/commands/: addDamage.php  addFile.php  getDriverCV.php  getDriverPhoto.php  removeFile.php
web/commands/base/: baseCommand.php  baseFile.php  basePhotos.php
web/configuration/: apache2.conf
web/configuration/sites-available/: 000-default.conf
